<resources>
    <string name="app_name">SikshaVavestha</string>

    <string name="need_a_new_account">NEED A NEW ACCOUNT</string>
    <string name="create_account">Create Account</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_out">Log Out</string>
    <string name="account_settings">Account Settings</string>
    <string name="login">Login</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="display_country">Country</string>
</resources>
